# YouTube-Media-Automator

./: .gitignore  app_dir_creator.py  cleanup_downloads.py  database_handler.py  download.py  main_window.py  pyproject.toml  pyrightconfig.json  queue_item.py  queue_item_widget.py  queue_manager.py  readme.md  smart_paste_utils.py  theme.py  title_fetch_thread.py
Hi Tech Version(Modular)/: .pylintrc  README.md  Start_YTD.bat  app.py  app_dir_creator.py  database_handler.py  download_thread.py  ffmpeg_utils.py  main_window.py  pyproject.toml  smart_paste_utils.py  vSmart_Paste_url.py
My YT Downloads/: downloads.db
legacy_scripts/: SETUP_GUIDE.md
