[project]
name = "ytd-hitech"
version = "0.1.0"
description = "YouTube Downloader Hi Tech Version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt5==5.15.11",
    "yt-dlp==2025.12.08",
    "loguru",
    "requests",
    "static-ffmpeg>=2.13",
    "pyqt5-qt5==5.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.11",
]

[tool.pylint.main]
extension-pkg-allow-list = ["PyQt5"]

